--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@ Consequently creating rows, which can be turned into a single column for smaller
 
 <div class="column1">
 	<h3>here is the title</h3>
-	<p>here is a paragraph</p>
+	<p>Police and protesters faced off in a tense confrontation in Ferguson, Mo., tonight, with police firing tear gas and demonstrators throwing the ...</p>
 </div>
 
 <div class="column2">
-	<h3>here is the title</h3>
-	<p>here is a paragraph</p>
+	<h3>Yahoo News - Latest News & Headlines</h3>
+	<p>2 days ago - CNN.com delivers the latest breaking news and information on the latest top stories, weather, business, entertainment, politics, and more.</p>
 </div>
 
 <div class="column3">
-	<h3>here is the title</h3>
-	<p>here is a paragraph</p>
+	<h3>SFGate: San Francisco Bay Area - News,Bay Area news ...</h3>
+	<p>CNN.com delivers the latest breaking news and information on the latest top stories, weather, business, entertainment, politics, and more.</p>
 </div>
 
 <div class="column4">
-	<h3>here is the title</h3>
-	<p>here is a paragraph</p>
+	<h3>San Francisco Examiner | Breaking News & Bay Area News</h3>
+	<p>Visit BBC News for up-to-the-minute news, breaking news, video, audio and feature stories. BBC News provides trusted World and UK news as well as local and ...here is a paragraph</p>
 </div>
 
 </div>
